--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport"
+          content="width=device-width,
+          initial-scale=1.0" />
+    <title>WEBSUHHHH</title>
+    <link href="style.css" rel="stylesheet" />
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm made of swag and coolness.</p>
+    <h1>What's up idiots'</h1>
 
 </body>
+
 </html>
