--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport"
-          content="width=device-width,
-          initial-scale=1.0" />
-    <title>WEBSUHHHH</title>
-    <link href="style.css" rel="stylesheet" />
-</head>
-<body>
-    <h1>What's up idiots'</h1>
+      <head>
+        <title>youre gay now</title>
+        <link rel="stylesheet" href="style.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      </head>
+  <body>
+    <div class="box">
+        whats up pussyboy did you read the website name
+    </div>
+    <div class="firsttext">
+      put your mouse on the bar
+    </div>
 
-</body>
-
+  </body>
 </html>
