--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
       <head>
         <title>youre gay now</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css" type="text/css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
       </head>
