--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
+
+
 <html lang="en">
       <head>
-        <title>youre gay now</title>
-        <link rel="stylesheet" href="./style.css" type="text/css">
-        <meta charset="UTF-8">
+        <title>Website Name</title>
+          <meta content="Embed Title" property="og:title" />
+          <meta content="Site Description" property="og:description" />
+          <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
+          <meta content="https://embed.com/embedimage.png" property="og:image" />
+          <meta content="#43B581" data-react-helmet="true" name="theme-color" />
+          <link rel="stylesheet" href="./style.css" type="text/css">
+          <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
       </head>
   <body>
