--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <html lang="en">
       <head>
-        <title>Website Name</title>
+        <title>PLUH</title>
           <meta content="Embed Title" property="og:title" />
           <meta content="Site Description" property="og:description" />
           <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
@@ -14,12 +14,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
       </head>
   <body>
+    <div class="backgroundpanel"></div>
+
     <div class="box">
-        whats up pussyboy did you read the website name
+        hi i love u
     </div>
     <div class="firsttext">
-      put your mouse on the bar
+      please put your mouse on the bar please please please
     </div>
 
+
+    <div class="button">
+      
+    </div>
   </body>
 </html>
